--- a/Changes
+++ b/Changes
@@ -1,17 +1,19 @@
-		 ====================================
-			 Package "Carp::Clan"
-		 ====================================
+                ============================
+                    Package "Carp::Clan"
+                ============================
 
-             Copyright (c) 2006-2008 by Joshua ben Jore
-			 All rights reserved.
+             Copyright (c) 2006-2009 by Joshua ben Jore
+             All rights reserved.
 
-	     Copyright (c) 2001 - 2004 by Steffen Beyer.
-			 All rights reserved.
-				   
+             Copyright (c) 2001-2009 by Steffen Beyer
+             All rights reserved.
 
 
 Version history:
 ----------------
+
+Version 6.01  16.10.2009
+ + Fixed bug of duplicated prefixes (RT ticket #50560)
 
 Version 6.00  17.02.2008
  + Oops. Fixed version number. '5.10' is less than '5.9'. I thought
