Set Version = 6.07 for next release

--- a/Changes
+++ b/Changes
@@ -12,6 +12,8 @@
 Version history:
 ----------------
 
+Version 6.07  29.05.2016
+
 Version 6.06  29.05.2016
  + Avoid failure due to version self-check in 20pre560.t
    This test seems like a footgun for release management reasons, but apprently
