Update Copyright and Contact details in existing documentation.

--- a/Changes
+++ b/Changes
@@ -2,12 +2,13 @@
                     Package "Carp::Clan"
                 ============================
 
-             Copyright (c) 2006-2009 by Joshua ben Jore
+             Copyright (c) 2006-2016 by Joshua ben Jore
              All rights reserved.
 
-             Copyright (c) 2001-2009 by Steffen Beyer
+             Copyright (c) 2001-2016 by Steffen Beyer
              All rights reserved.
 
+             Copyright (c) 2016-2016 by Kent Fredric
 
 Version history:
 ----------------
