convert packaging to Dist::Zilla
- removed files from git that are now autogenerated by the build
- removed tests in t/ that are covered by new xt/author/ tests
- licence should stay the same (the perl licence is GPLv1 + Artistic)
- prerequisites are now declared at the proper phase(s)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Carp-Clan
 
+{{$NEXT}}
+ - declared test prerequisites in the proper phase (RT#125288)
+ - modernized distribution tooling
+
 6.06      2016-05-29
  - Avoid failure due to version self-check in 20pre560.t
    This test seems like a footgun for release management reasons, but apprently
